Fri Mar  7 12:06:19 2014  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_ssl.rb: Reuse TLS default options from
	  OpenSSL::SSL::SSLContext::DEFAULT_PARAMS.

Thu Mar  6 15:15:24 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/assignment.rdoc: [DOC] Fix assignment directions
	  By @idupree [Fixes GH-555] https://github.com/ruby/ruby/pull/555

Thu Mar  6 15:07:18 2014  Zachary Scott  <e@zzak.io>

	* doc/syntax/methods.rdoc: [DOC] Fix example for block arguments
	  By @idupree [Fixes GH-554] https://github.com/ruby/ruby/pull/554

Thu Mar  6 10:33:31 2014  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* lib/openssl/ssl.rb: Explicitly whitelist the default
	  SSL/TLS ciphers. Forbid SSLv2 and SSLv3, disable
	  compression by default.
	  Reported by Jeff Hodges.
	  [ruby-core:59829] [Bug #9424]

Wed Mar  5 15:56:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_arg_asgn): define optional arguments as argument
	  variables in the rhs default expressions.
	  [ruby-core:61299] [Bug #9593]

Wed Mar  5 11:58:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl.c (ossl_make_error): check NULL for unknown
	  error reasons with old OpenSSL, and insert a colon iff formatted
	  message is not empty.

Wed Mar  5 00:42:00 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* ext/pathname/lib/pathname.rb (Pathname#find): add "ignore_error"
	  keyword argument defaulted to true as well as Find#find.

Tue Mar  4 23:00:18 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_eval.rb (TestEval#make_test_binding): renamed.
	  it's not test method.

Tue Mar  4 20:50:59 2014  Masaya Tarui  <tarui@ruby-lang.org>

	* st.c (st_foreach): fix type of hash. not st_data_t but st_index_t.

Tue Mar  4 19:41:40 2014  Tanaka Akira  <akr@fsij.org>

	* Makefile.in: ".DEFAULT" target removed because it is not for
	  specifying default target.

Tue Mar  4 00:25:35 2014  Kazuki Tsujimoto  <kazuki@callcc.net>
